--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="leaflet.draw.ie.css" />
     <![endif]-->
-    <link rel="stylesheet" href="http://mrmufflon.github.io/Leaflet.Elevation/dist/Leaflet.Elevation-0.0.1.css" />
+    <link rel="stylesheet" href="bower_components/Leaflet.Elevation/dist/Leaflet.Elevation-0.0.1.css" />
     <link rel="stylesheet" href="bower_components/leaflet-search/dist/leaflet-search.min.css" />
     <link rel="stylesheet" href="css/leaflet-routing.css" />
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css" />
@@ -79,7 +79,7 @@
 
     <!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.1/d3.min.js"></script>
-    <script src="http://mrmufflon.github.io/Leaflet.Elevation/dist/Leaflet.Elevation-0.0.1.min.js"></script>
+    <script src="bower_components/Leaflet.Elevation/src/L.Control.Elevation.js"></script>
 
     <script>
         // global package prefix for BRouter web application
