--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="title"><span class="title-name">BRouter web</span>&nbsp;&nbsp;<sup class="version">alpha1</sup></div>
         <div class="header-text">
             'ESC' to cancel drawing, 'M' to enable drawing<br>
-            Web client for <a href="http://brensche.de/brouter" target="_blank">BRouter</a> &middot;  
+            Web client for <a href="http://brouter.de/brouter" target="_blank">BRouter</a> &middot;  
             <a href="https://github.com/nrenner/brouter-web#readme" target="_blank">about</a> &middot; 
             <a href="https://github.com/nrenner/brouter-web" target="_blank">GitHub</a> &middot; 
             <a href="http://www.openstreetmap.org/message/new/ikonor" target="_blank">contact (via OSM)</a><br>
