use google group as contact

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Web client for <a href="http://brouter.de/brouter" target="_blank">BRouter</a> &middot;  
             <a href="https://github.com/nrenner/brouter-web#readme" target="_blank">about</a> &middot; 
             <a href="https://github.com/nrenner/brouter-web" target="_blank">GitHub</a> &middot; 
-            <a href="http://www.openstreetmap.org/message/new/ikonor" target="_blank">contact (via OSM)</a><br>
+            <a href="http://groups.google.com/group/osm-android-bikerouting" target="_blank">contact</a><br>
         </div>
     </div>
     <div id="route_options" class="hidden">
