--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <script src="js/plugin/NogoAreas.js"></script>
     <script src="js/plugin/Elevation.js"></script>
     <script src="js/plugin/Search.js"></script>
+    <script src="js/plugin/Permalink.Routing.js"></script>
     <script src="js/control/TrackStats.js"></script>
     <script src="js/control/Download.js"></script>
     <script src="js/control/Profile.js"></script>
