--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
     <div id="profile_div" class="hidden">
         <form id="profile_upload" name="profile_upload">
+            <button id="clear">Clear</button>
             <input type="submit" value="Upload" />
             <div id="textarea_container">
                 <textarea type="text" name="profile" spellcheck="false" wrap="off" maxlength="100000" placeholder="... paste your custom routing profile here ..."></textarea>
