profile Help link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     </div>
     <div id="profile_div" class="hidden">
         <form id="profile_upload" name="profile_upload">
-            <button id="clear">Clear</button>
+            <button id="clear">Clear</button>&nbsp;
+            <a href="http://brouter.de/brouter/costfunctions.html" target="_blank">Help</a>
             <input type="submit" value="Upload" />
             <div id="textarea_container">
                 <textarea type="text" name="profile" spellcheck="false" wrap="off" maxlength="100000" placeholder="... paste your custom routing profile here ..."></textarea>
