warning to save edits on first profile upload

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <script src="js/control/Download.js"></script>
     <script src="js/control/Profile.js"></script>
     <script src="js/control/RoutingOptions.js"></script>
+    <script src="js/control/Message.js"></script>
 
     <script src="js/index.js"></script>
 </body>
