sequential segment requests (Async.js queue) instead of firing all at once, fixes terminated requests when number of segments > maxthreads

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.1/d3.min.js"></script>
     <script src="bower_components/Leaflet.Elevation/src/L.Control.Elevation.js"></script>
+    <script src="bower_components/async/lib/async.js"></script>
 
     <script>
         // global package prefix for BRouter web application
