--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="header" class="hidden">
         <div class="title"><span class="title-name">BRouter web</span>&nbsp;&nbsp;<sup class="version">alpha2</sup></div>
         <div class="header-text">
-            'q' to cancel drawing, 'd' to enable drawing<br>
+            'esc' or 'q' to disable drawing, 'd' to enable drawing<br>
             Web client for <a href="http://brouter.de/brouter" target="_blank">BRouter</a> &middot;
             <a href="https://github.com/nrenner/brouter-web#readme" target="_blank">about</a> &middot;
             <a href="https://github.com/nrenner/brouter-web" target="_blank">GitHub</a> &middot;
