upcoming version 0.4.0 (switch to minor numbering)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="message" class="info hidden">
     </div>
     <div id="header" class="hidden">
-        <div class="title"><span class="title-name">BRouter web</span>&nbsp;&nbsp;<sup class="version">alpha3</sup></div>
+        <div class="title"><span class="title-name">BRouter web</span>&nbsp;&nbsp;<sup class="version">0.4.0</sup></div>
         <div class="header-text">
             'esc' or 'q' to disable drawing, 'd' to enable drawing<br>
             Web client for <a href="http://brouter.de/brouter" target="_blank">BRouter</a> &middot;
