Load profile content for selected profile

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         BR = {};
     </script>
     <script src="config.js"></script>
+    <script src="js/Util.js"></script>
     <script src="js/router/BRouter.js"></script>
     <!-- <script src="js/router/brouterCgi.js"></script> -->
     <script src="js/control/Control.js"></script>
