Bing maps aerial layer

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <script src="bower_components/leaflet-search/dist/leaflet-search.min.js"></script>
     <script src="bower_components/leaflet-plugins/control/Permalink.js"></script>
     <script src="bower_components/leaflet-plugins/control/Permalink.Layer.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/tile/Bing.js"></script>
 
     <script src="bower_components/leaflet-routing/src/utils/LineUtil.Snapping.js"></script>
     <script src="bower_components/leaflet-routing/src/utils/Marker.Snapping.js"></script>
@@ -115,6 +116,7 @@
     <script src="js/plugin/NogoAreas.js"></script>
     <script src="js/plugin/Elevation.js"></script>
     <script src="js/plugin/Search.js"></script>
+    <script src="js/plugin/Bing.js"></script>
     <script src="js/plugin/Permalink.Routing.js"></script>
     <script src="js/control/TrackStats.js"></script>
     <script src="js/control/Download.js"></script>
