--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
     </script>
 
     <script src="config.js"></script>
+
+    <!-- "gulp inject" for debugging -->
+    <!-- inject:js -->
     <script src="dist/brouter-web.js"></script>
-</body>
+    <!-- endinject -->
+
+  </body>
 </html>
