add notes: not a public API

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
     <script>
         // global package prefix for BRouter web application
         BR = {};
+            
+        console.log('\r\n###\r\n###  BRouter-Web\r\n###\r\n###  Please note that the routing API used here is not public!\r\n###\r\n');
     </script>
 
     <script src="config.js"></script>
