config switch for transit demo

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         console.log('\r\n###\r\n###  BRouter-Web\r\n###\r\n###  Please note that the routing API used here is not public!\r\n###\r\n');
     </script>
 
+    <script src="dist/url-search-params.js"></script>
     <script src="config.js"></script>
 
     <!-- "gulp inject" for debugging -->
