rename to itinerary

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </ul>
 
         <div class="tab-content">
-            <div class="tab-pane hidden" id="tab_iternity">
-                <div id="iternity">
+            <div class="tab-pane hidden" id="tab_itinerary">
+                <div id="itinerary">
                 </div>
             </div>
             <div class="tab-pane" id="tab_profile">
