add keys.js to configure API keys instead of specific ajax loading

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
     <script src="dist/url-search-params.js"></script>
     <script src="config.js"></script>
+    <script src="keys.js"></script>
 
     <!-- "gulp inject" for debugging -->
     <!-- inject:js -->
