Fix elevation chart offset when hiding/showing it on Chrome-based browsers

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
     </div>
 
-    <div id="content">
+    <div id="content" class="flexcolumn">
         <div id="map"></div>
 
         <div id="message"></div>
