Remember collapsible state in local storage (elevation chart, sidebar)

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
     </div>
 
-    <div class="collapse in" id="elevation-chart"></div>
+    <div class="collapse" id="elevation-chart"></div>
 
     <footer>
         <div class="flexrow">
@@ -237,7 +237,7 @@
                 <span class="fa fa-compress"></span>
             </button>
 
-            <button class="btn btn-secondary btn-sm active" type="button" data-toggle="collapse" data-target="#elevation-chart" aria-controls="elevation-chart" id="elevation-btn" aria-expanded="false" aria-label="Toggle elevation chart">
+            <button class="btn btn-secondary btn-sm" type="button" data-toggle="collapse" data-target="#elevation-chart" aria-controls="elevation-chart" id="elevation-btn" aria-expanded="false" aria-label="Toggle elevation chart">
                 <span class="fa fa-area-chart"></span>
             </button>
         </div>
