--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
         </div>
         <div class="collapse navbar-toggleable-sm" id="collapsingNavbar">
             <div class="nav navbar-nav">
-                <a class="nav-item nav-link" href="" data-toggle="modal" data-target="#options">
-                    <span class="fa fa-lg fa-cog"></span>&nbsp;Options</a>
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="fa fa-lg fa-cloud-download"></span>&nbsp;Download</a>
@@ -115,33 +113,6 @@
         </div>
     </div>
 
-    <!-- Options modal window -->
-    <div class="modal fade" id="options" tabindex="-1" role="dialog" aria-labelledby="Help window" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">Options</h4>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <label for="profile_upload">Custom routing profile:</label>
-                        <textarea class="form-control" type="text" id="profile_upload" spellcheck="false" wrap="off" rows="5"></textarea>
-                        <div id="profile_message"></div>
-                        <div class="form-group" id="profile_buttons">
-                             <button id="clear" type="button" class="btn btn-sm"><span class="fa fa-eraser"></span> Clear</button>
-                             <button id="upload" type="button" class="btn btn-sm" data-uploading-text="Uploading…"><span class="fa fa-cloud-upload"></span> Upload</button>
-                             <a href="http://brouter.de/brouter/costfunctions.html" target="_blank" class="btn btn-sm btn-info pull-right"><span class="fa fa-question"></span> Help</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
     <!-- About modal window -->
     <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="About window" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -198,6 +169,17 @@
 
 
     <div id="sidebar">
+            <form>
+                <label for="profile_upload">Custom routing profile</label>
+                <textarea class="form-control" type="text" id="profile_upload" spellcheck="false" wrap="off" placeholder="Write your custom profile here."></textarea>
+                <div id="profile_message"></div>
+                <div class="form-group" id="profile_buttons">
+                     <button id="clear" type="button" class="btn btn-sm"><span class="fa fa-eraser"></span> Clear</button>
+                     <button id="upload" type="button" class="btn btn-sm" data-uploading-text="Uploading…"><span class="fa fa-cloud-upload"></span> Upload</button>
+                     <a href="http://brouter.de/brouter/costfunctions.html" target="_blank" class="btn btn-sm btn-info pull-right"><span class="fa fa-question"></span> Help</a>
+                </div>
+            </form>
+
             <ul id="tab" class="nav nav-tabs" role="tablist">
             </ul>
             <div class="tab-content">
